[project]
name = "webprobe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.38",
    "uvloop>=0.21.0",
]

[project.scripts]
webprobe = "webprobe:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
